5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1637_2446.log
== TEST (2019-04-10 15:48:03) 
-- CODE:
senha = int(input("Qual sua senha: "))

x1 = senha // 1 % 10
x2 = senha // 10 % 10
x3 = senha // 100 % 10
x4 = senha // 1000 % 10
x5 = senha // 10000 % 10
x6 = senha // 100000 % 10

c = (x1 + x3 + x5) % (x2 + x4 + x6)
v = (x2 + x4 + x6) % (x1 + x3 + x5)

if (c == ) or (v == 0):
	mensagem = "acesso liberado"
else:
	mensagem = "acesso negado"
	
print(mensagem)
-- ERROR:
File "XXXX", line 13
    if (c == ) or (v == 0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:48:20) 
-- CODE:
senha = int(input("Qual sua senha: "))

x1 = senha // 1 % 10
x2 = senha // 10 % 10
x3 = senha // 100 % 10
x4 = senha // 1000 % 10
x5 = senha // 10000 % 10
x6 = senha // 100000 % 10

c = (x1 + x3 + x5) % (x2 + x4 + x6)
v = (x2 + x4 + x6) % (x1 + x3 + x5)

if (c == 0) or (v == 0):
	mensagem = "acesso liberado"
else:
	mensagem = "acesso negado"
	
print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 15:48:54) 
-- CODE:
senha = int(input("Qual sua senha: "))

x1 = senha // 1 % 10
x2 = senha // 10 % 10
x3 = senha // 100 % 10
x4 = senha // 1000 % 10
x5 = senha // 10000 % 10
x6 = senha // 100000 % 10

c = (x1 + x3 + x5) % (x2 + x4 + x6)
v = (x2 + x4 + x6) % (x1 + x3 + x5)

if (c == 0) or (v == 0):
	mensagem = "acesso liberado"
else:
	mensagem = "acesso negado"
	
print(mensagem)
-- EXECUTION TIME:
0.16612
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso negado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:49:06) 
-- CODE:
senha = int(input("Qual sua senha: "))

x1 = senha // 1 % 10
x2 = senha // 10 % 10
x3 = senha // 100 % 10
x4 = senha // 1000 % 10
x5 = senha // 10000 % 10
x6 = senha // 100000 % 10

c = (x1 + x3 + x5) % (x2 + x4 + x6)
v = (x2 + x4 + x6) % (x1 + x3 + x5)

if (c == 0) or (v == 0):
	mensagem = "acesso liberado"
else:
	mensagem = "senha invalida"
	
print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:49:15) 
-- CODE:
senha = int(input("Qual sua senha: "))

x1 = senha // 1 % 10
x2 = senha // 10 % 10
x3 = senha // 100 % 10
x4 = senha // 1000 % 10
x5 = senha // 10000 % 10
x6 = senha // 100000 % 10

c = (x1 + x3 + x5) % (x2 + x4 + x6)
v = (x2 + x4 + x6) % (x1 + x3 + x5)

if (c == 0) or (v == 0):
	mensagem = "acesso liberado"
else:
	mensagem = "senha invalida"
	
print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 15:49:29) 
-- CODE:
senha = int(input("Qual sua senha: "))

x1 = senha // 1 % 10
x2 = senha // 10 % 10
x3 = senha // 100 % 10
x4 = senha // 1000 % 10
x5 = senha // 10000 % 10
x6 = senha // 100000 % 10

c = (x1 + x3 + x5) % (x2 + x4 + x6)
v = (x2 + x4 + x6) % (x1 + x3 + x5)

if (c == 0) or (v == 0):
	mensagem = "acesso liberado"
else:
	mensagem = "senha invalida"
	
print(mensagem)
-- EXECUTION TIME:
0.147153
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
